--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.5",
     "node-dir": "^0.1.17",
     "react": "19.2.0",
@@ -19,6 +21,7 @@
     "@types/node": "20.19.25",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4"
