--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "20.19.25",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "jest": "^30.2.0",
     "tailwindcss": "^4"
   }
 }
